# discord-bot

./: #config.json#  .env~  .gitignore  Cargo.nix  Cargo.toml  config.json  config.json.example  config.json~  config.toml~  flake.nix  result
migrations/2023-05-30-184445_create-points/: down.sql  up.sql
migrations/2023-06-03-163615_create_permissions/: up.sql
migrations/2023-06-07-132343_create_options/: down.sql  up.sql
migrations/2023-06-07-191628_create_status/: up.sql
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  structs.rs
src/commands/: mod.rs
src/commands/getvotes/: mod.rs
src/commands/help/: mod.rs
src/commands/main/: mod.rs
src/commands/manage/: mod.rs
src/commands/manage/subcommands/points/: mod.rs
src/commands/manage/subcommands/points/subcommands/: mod.rs
src/commands/manage/subcommands/points/subcommands/give/: mod.rs
src/commands/options/: mod.rs
src/commands/options/subcommands/email/: mod.rs
src/commands/options/subcommands/email/subcommands/address/: mod.rs
src/commands/points/: mod.rs
src/commands/points/subcommands/: mod.rs
src/commands/points/subcommands/balance/: mod.rs
src/commands/points/subcommands/gift/: mod.rs
src/commands/vote/: mod.rs
src/events/: mod.rs
src/events/interaction_create/: mod.rs
src/events/message/: mod.rs
src/events/message/points/: mod.rs
src/events/presence_update/: mod.rs
src/helpers/: mod.rs
src/helpers/check_permissions/: mod.rs
src/helpers/get_options/: mod.rs
src/helpers/transfer/: mod.rs
