[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.21.2", features = ["macros", "signal", "rt-multi-thread"] }
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
serde_json = "1.0.59"
config = "0.9.1"